Fixed padding/align on rows and added Status Badges

--- a/src/components/IncidentTable/IncidentTableComponent.scss
+++ b/src/components/IncidentTable/IncidentTableComponent.scss
@@ -60,6 +60,8 @@
   border-radius: 5px;
   vertical-align: -4px;
   border-radius: 4px;
+  position: relative;
+  left: 5px;
 }
 
 .priority-label-dropdown {
@@ -74,6 +76,16 @@
   white-space: nowrap;
   padding: 5px 10px 3px;
   border-radius: 5px;
+}
+
+/* Status Badge */
+.status-badge {
+  width: 26px;
+  height: 26px;
+  font-size: unset !important;
+  padding-top: 5px !important;
+  position: relative;
+  left: 10px;
 }
 
 /* React-Table CSS */
@@ -134,7 +146,10 @@
 }
 
 .td {
-  padding: 10px !important;
+  padding: 5px !important;
+  padding-left: 10px !important;
+  align-items: center !important;
+  display: flex !important;
 }
 
 .pagination-results {
